Dependencies, build refinements.

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'org.springframework.boot' version '2.6.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+
+	// Flyway Migrations
+	id "org.flywaydb.flyway" version "8.5.4"
 }
 
 group = 'ru.mirea'
@@ -14,20 +17,33 @@ configurations {
 	}
 }
 
+jar {
+    enabled = false
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Basic
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// Database
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.postgresql:postgresql'
+
+	// General
+	implementation 'org.modelmapper:modelmapper:3.1.0'
+	implementation 'org.springdoc:springdoc-openapi:1.6.6'
 }
 
 tasks.named('test') {
