--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,12 @@ server:
 spring:
   application:
     name: recipe-book-server
+  datasource:
+    url: jdbc:postgresql://${YSQ_DB_HOST}:5432/${YSQ_DB_USER}
+    username: ${YSQ_DB_USER}
+    password: ${YSQ_DB_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: validate
+  flyway:
+    clean-on-validation-error: false
