--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: CI with Heroku deployment
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -18,10 +18,28 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Build with Gradle
+    - name: Run Tests
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
+        arguments: check
+    
+  build:
+  
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Build
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: build -x check
 
   deploy:
   
