--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,5 @@ spring:
       ddl-auto: validate
   flyway:
     clean-on-validation-error: false
+ysq:
+  default-admin-password: ${YSQ_DEFAULT_PWD}
