--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,7 +1,7 @@
 {
   "properties": [
     {
-      "name": "ysq.default-admin-password",
+      "name": "recipe-book.default-admin-password",
       "type": "java.lang.String",
       "description": "Password for default admin user."
   }
