--- a/Dockerfile-Heroku
+++ b/Dockerfile-Heroku
@@ -3,6 +3,6 @@ COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle build -x check --no-daemon
 
-FROM gcr.io/distroless/java17-debian11
+FROM eclipse-temurin:17-jre-alpine
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/recipe-book-server.jar
 CMD ["sh", "-c", "java -Dserver.port=$PORT -Xmx300m -Xss512k -XX:CICompilerCount=2 -Dfile.encoding=UTF-8 -XX:+UseContainerSupport -Djava.security.egd=file:/dev/./urandom -jar -Dspring.profiles.active=heroku /app/recipe-book-server.jar"]
