--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -76,6 +76,9 @@ jobs:
         with:
           name: jarfile
       
+      - name: Display structure of downloaded files
+        run: ls -R
+      
       - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
