--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -2,7 +2,7 @@ name: Heroku deployment
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, ci-setup ]
 
 concurrency:
   group: main-ci-${{ github.ref }}
