--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -54,11 +54,11 @@ jobs:
       with:
         arguments: build -x check
     
-    - name: Upload build reports
+    - name: Upload jar
       uses: actions/upload-artifact@v3
       with:
         name: jarfile
-        path: build/libs/
+        path: build/libs/*.jar
         if-no-files-found: error
         retention-days: 3
   
@@ -76,9 +76,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: jarfile
-      
-      - name: Display structure of downloaded files
-        run: ls -R
+          path: libs
       
       - name: Log in to the Container registry
         uses: docker/login-action@v1
@@ -105,7 +103,7 @@ jobs:
 
   deploy:
   
-    needs: build
+    needs: build-image
     runs-on: ubuntu-latest
     
     steps:
