--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -37,6 +37,7 @@ jobs:
   
     needs: test
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     
     steps:
     - name: Checkout repository
