--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8082
-
 spring:
   application:
     name: recipe-book-server
@@ -10,6 +7,6 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
   flyway:
     enabled: false
